# csvdiffgpt

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test.ipynb  test_generate_tests_script.py  test_restructutre_fun.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
csvdiffgpt/: __init__.py  cli.py
csvdiffgpt/core/: preprocessor.py  utils.py
csvdiffgpt/data_models/: mermaid_adapter.py  python_adapter.py  sql_adapter.py
csvdiffgpt/llm/: base.py  gemini.py  openai.py
csvdiffgpt/llm/prompts/: clean.txt  compare.txt  explain_code.txt  generate_tests.txt  restructure.txt  summarize.txt  validate.txt
csvdiffgpt/restructure_analyzers/: normalization_analyzer.py  redundancy_analyzer.py  relationship_analyzer.py  type_consistency_analyzer.py
csvdiffgpt/tasks/: compare.py  summarize.py  validate.py
csvdiffgpt/test_frameworks/: dbt_adapter.py  pytest_adapter.py
csvdiffgpt/test_generators/: quality_tests.py  relationship_tests.py  schema_tests.py
test/: test.py
tests/: conftest.py
tests/fixtures/: modified.csv  simple.csv
tests/integration/: test_integration.py
tests/unit/: test_clean.py  test_cli.py  test_compare.py  test_explain.py  test_generate_tests.py  test_llm.py  test_preprocessor.py  test_restructure.py  test_summarize.py  test_utils.py  test_validate.py
