[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csvdiffgpt"
version = "0.1.0"
description = "A package for analyzing CSV files using LLMs"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.1.0"]
claude = ["anthropic>=0.5.0"]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "mypy>=0.812",
]
all = [
    "openai>=1.0.0",
    "google-generativeai>=0.1.0", 
    "anthropic>=0.5.0"
]

[project.urls]
"Homepage" = "https://github.com/SohamMane812/csvdiffgpt"
"Bug Tracker" = "https://github.com/SohamMane812/csvdiffgpt/issues"

[tool.setuptools]
packages = ["csvdiffgpt"]